# axolotl

./: Cargo.toml  README.md  flake.nix
src/: main.rs
templates/: all.stpl
